--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "humps": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.1.0",
-    "lodash": "^4.6.1",
+    "lodash": "^4.11.2",
     "parse-form": "^2.0.3",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-ellipsis-text": "^0.2.0",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "redux": "^3.3.1",
